--- a/Disruptor/res/values/strings.xml
+++ b/Disruptor/res/values/strings.xml
@@ -2,7 +2,8 @@
 
     <string name="app_name">Disruptor</string>
     <string name="menu_settings">Settings</string>
-    <string name="title_activity_main">Disruptor</string>
+    <string name="title_activity_main">Disruptor: Sound</string>
+    <string name="title_activity_soundplayer">Disruptor</string>
     <string name="exit">Exit</string>
 
 </resources>
